--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-   Enter a guess <input type ="number" class="guess"> 
-   <button class="button">Guess Number</button> 
-   <div class="previousguess"></div>
-   <div class="answer"></div>
-   <div class="range"></div>
+  <label for="guess"> Enter a guess </label>
+  <input type ="number" class="guess"> 
+   <input type="submit" class="button" value="Guess Number"> 
+<div class="working">
+   <p class="previousguess"></p>
+   <p class="answer"></p>
+   <p class="range"></p>
+</div>
 </body>
 <script src="prac.js"></script>
 </html>
