--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guess game</title>
+    <link rel="stylesheet"  href="index.css">
 </head>
 <body>
-  <label for="guess"> Enter a guess </label>
+   
+  <label for="guess"> Guess Number Between 1-100:
+    you Have only 10 trials.
+  </label>
   <input type ="number" class="guess"> 
    <input type="submit" class="button" value="Guess Number"> 
 <div class="working">
@@ -15,6 +19,7 @@
    <p class="answer"></p>
    <p class="range"></p>
 </div>
+
 </body>
 <script src="prac.js"></script>
 </html>
